@@ -32,7 +32,9 @@ define(`n',  r4)
 ASM_START()
 PROLOGUE(mpn_popcount)
 	addi	r0, n, 1
-	srdi	r0, r0, 1
+ifdef(`HAVE_ABI_mode32',
+`	rldicl	r0, r0, 63,33',	C ...branch count
+`	srdi	r0, r0, 1')	C ...for ctr
 	mtctr	r0
 
 	andi.	r0, n, 1
